[workspace]
members = [
    "contracts/banana-vaults",
    "packages/pyth-sdk-cw",
]
resolver = "2"

[workspace.dependencies]
cosmos-sdk-proto = "0.20.0"
cosmwasm-schema = "2.0.0"
cosmwasm-std = "2.0.0"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.52"
prost = "0.12.3"
pyth-sdk = "0.7.0"
pyth-sdk-cw = { path = "packages/pyth-sdk-cw" }
osmosis-std = { git = "https://github.com/osmosis-labs/osmosis-rust" }
osmosis-test-tube = "25.0.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
