[package]
name = "banana-vault"
version = "0.5.1"
edition = "2021"
authors = ["Banana DAO"]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }
pyth-sdk-cw = { workspace = true }
osmosis-std = { workspace = true }

[dev-dependencies]
osmosis-test-tube = { workspace = true }
cosmos-sdk-proto = { workspace = true }
